test/classes/errors/nilability-assign/assign-nonnil-owned-from-oknil-nil.good
assign-nonnil-owned-from-oknil-nil.chpl:10: error: done
